@@ -1,233 +1,30 @@
 ﻿<?xml version="1.0"?>
 <me:mesmer xmlns="http://www.xml-cml.org/schema" xmlns:me="http://www.chem.leeds.ac.uk/mesmer">
   <moleculeList>
-	<molecule id="HNO2">
-	  <metadataList>
-		<metadata name="dc:description" content="Listing of experimental data for HNO2 (Nitrous acid)"/>
-		<metadata name="dc:source" content="unknown"/>
-		<metadata name="dc:creator" content="OpenBabel version 2.3.90"/>
-		<metadata name="dc:contributor" content="unknown"/>
-		<metadata name="dc:date" content="Mon May 30 15:58:13 GMT Daylight Time 2011"/>
-	  </metadataList>
-	  <atomArray>
-		<atom id="a1" elementType="H" x3="1.754500" y3="-0.182300" z3="0.000000"/>
-		<atom id="a2" elementType="O" x3="0.894200" y3="-0.606100" z3="0.000000"/>
-		<atom id="a3" elementType="N" spinMultiplicity="2" x3="0.000000" y3="0.525200" z3="0.000000"/>
-		<atom id="a4" elementType="O" spinMultiplicity="2" x3="-1.113500" y3="0.169300" z3="0.000000"/>
-	  </atomArray>
-	  <bondArray>
-		<bond atomRefs2="a1 a2" order="1"/>
-		<bond atomRefs2="a2 a3" order="1"/>
-		<bond atomRefs2="a3 a4" order="1"/>
-	  </bondArray>
+	<molecule id="Test Molecule">
 	  <propertyList>
 		<property title="Hf298">
-		  <scalar>-78.94</scalar>
+		  <scalar>0.0</scalar>
 		</property>
-		<!--<property title="Hf0">
-          <scalar>-72.80</scalar>
-        </property>-->
+      <!-- Frequencies taken from: Baer & Hase, Unimolecular Reaction Dynamics.
+	          Theory and Experiments [Oxford U. Press, 1996], p. 186.-->
 		<property title="Vibrational Frequencies" dictRef="me:vibFreqs">
-		  <array units="cm-1">3591.00 1700.00 1263.00 790.00 596.00 543.00 </array>
+		  <array units="cm-1">
+        3030        3020        3010        3005        1503        1401
+        1383         999         951         877         652         333
+         278         250          89
+      </array>
 		</property>
 		<property title="Rotational Constants" dictRef="me:rotConsts">
-		  <array units="cm-1">3.096 0.417 0.367 </array>
+		  <array units="cm-1">3.00 3.00 3.00 </array>
 		</property>
 		<property title="Symmetry Number" dictRef="me:symmetryNumber">
 		  <scalar>1 </scalar>
-		</property>
-		<property dictRef="me:deltaEDown">
-		  <scalar units="cm-1">190.0</scalar>
-		</property>
-		<!--<property dictRef="me:ZPE">
-          <scalar calculated="20110602_152335" units="kJ/mol" source="me:Hf0" convention="computational">-539583.33</scalar>
-        </property>-->
-	  </propertyList>
-	</molecule>
-
-	<molecule id="OH">
-	  <metadataList>
-		<metadata name="dc:description" content="Listing of experimental data for OH (Hydroxyl radical)"/>
-		<metadata name="dc:source" content="unknown"/>
-		<metadata name="dc:creator" content="OpenBabel version 2.3.90"/>
-		<metadata name="dc:contributor" content="unknown"/>
-		<metadata name="dc:date" content="Mon May 30 16:00:36 GMT Daylight Time 2011"/>
-	  </metadataList>
-	  <atomArray>
-		<atom id="a1" elementType="O" spinMultiplicity="2" x3="0.000000" y3="0.000000" z3="0.000000"/>
-		<atom id="a2" elementType="H" x3="0.000000" y3="0.000000" z3="0.969700"/>
-	  </atomArray>
-	  <bondArray>
-		<bond atomRefs2="a1 a2" order="1"/>
-	  </bondArray>
-	  <propertyList>
-		<property title="Hf298">
-		  <scalar>37.36</scalar>
-		</property>
-		<!--<property title="Hf0">
-          <scalar>37.11</scalar>
-        </property>-->
-		<property title="SpinMultiplicity" dictRef="me:spinMultiplicity">
-		  <scalar>2.00 </scalar>
-		</property>
-		<property title="Vibrational Frequencies" dictRef="me:vibFreqs">
-		  <array units="cm-1">3738.00 </array>
-		</property>
-		<property title="Rotational Constants" dictRef="me:rotConsts">
-		  <array units="cm-1">18.898 </array>
-		</property>
-		<property title="Symmetry Number" dictRef="me:symmetryNumber">
-		  <scalar>1</scalar>
-		</property>
-		<property title="Electronic Excitation" dictRef="me:electronicExcitation">
-		  <scalar units="cm-1">139.21</scalar>
-		</property>
-		<property dictRef="me:deltaEDown">
-		  <scalar units="cm-1">190.0</scalar>
-		</property>
-		<!--<property dictRef="me:ZPE">
-          <scalar calculated="20110602_152731" units="kJ/mol" source="me:Hf0" convention="computational">-198662.84</scalar>
-        </property>-->
-	  </propertyList>
-
-	  <me:DOSCMethod>DefinedStatesRotors</me:DOSCMethod>
-	  <me:States units="cm-1">
-		<!--F1 Branch-->
-		<me:State energy="0.0"       degeneracy="4"/>
-		<me:State energy="83.98599"  degeneracy="6"/>
-		<me:State energy="202.6942"  degeneracy="8"/>
-		<me:State energy="356.7499"  degeneracy="10"/>
-		<me:State energy="546.6330"  degeneracy="12"/>
-		<me:State energy="772.6894"  degeneracy="14"/>
-		<me:State energy="1035.163"  degeneracy="16"/>
-		<me:State energy="1334.224"  degeneracy="18"/>
-		<me:State energy="1669.996"  degeneracy="20"/>
-		<me:State energy="2042.565"  degeneracy="22"/>
-		<me:State energy="2451.995"  degeneracy="24"/>
-		<me:State energy="2898.334"  degeneracy="26"/>
-		<me:State energy="3381.619"  degeneracy="28"/>
-		<me:State energy="3901.876"  degeneracy="30"/>
-		<me:State energy="4459.128"  degeneracy="32"/>
-		<me:State energy="5053.391"  degeneracy="34"/>
-		<me:State energy="5684.678"  degeneracy="36"/>
-		<me:State energy="6353.001"  degeneracy="38"/>
-		<me:State energy="7058.368"  degeneracy="40"/>
-		<!--F2 Branch-->
-		<me:State energy="126.331"   degeneracy="2"/>
-		<me:State energy="187.65"    degeneracy="4"/>
-		<me:State energy="289.154"   degeneracy="6"/>
-		<me:State energy="430.1318"  degeneracy="8"/>
-		<me:State energy="609.9581"  degeneracy="10"/>
-		<me:State energy="828.153"   degeneracy="12"/>
-		<me:State energy="1084.371"  degeneracy="14"/>
-		<me:State energy="1378.367"  degeneracy="16"/>
-		<me:State energy="1709.972"  degeneracy="18"/>
-		<me:State energy="2079.062"  degeneracy="20"/>
-		<me:State energy="2485.551"  degeneracy="22"/>
-		<me:State energy="2929.375"  degeneracy="24"/>
-		<me:State energy="3410.486"  degeneracy="26"/>
-		<me:State energy="3928.847"  degeneracy="28"/>
-		<me:State energy="4484.432"  degeneracy="30"/>
-		<me:State energy="5077.218"  degeneracy="32"/>
-		<me:State energy="5707.189"  degeneracy="34"/>
-		<me:State energy="6374.332"  degeneracy="36"/>
-		<me:State energy="7078.635"  degeneracy="38"/>
-		<me:State energy="7820.09"   degeneracy="40"/>
-	  </me:States>
-
-	</molecule>
-
-	<molecule id="NO">
-	  <metadataList>
-		<metadata name="dc:description" content="Listing of experimental data for NO (Nitric oxide)"/>
-		<metadata name="dc:source" content="unknown"/>
-		<metadata name="dc:creator" content="OpenBabel version 2.3.90"/>
-		<metadata name="dc:contributor" content="unknown"/>
-		<metadata name="dc:date" content="Mon May 30 16:19:30 GMT Daylight Time 2011"/>
-	  </metadataList>
-	  <atomArray>
-		<atom id="a1" elementType="O" x3="0.000000" y3="0.000000" z3="0.000000"/>
-		<atom id="a2" elementType="N" spinMultiplicity="2" x3="0.000000" y3="0.000000" z3="1.150800"/>
-	  </atomArray>
-	  <bondArray>
-		<bond atomRefs2="a1 a2" order="2"/>
-	  </bondArray>
-	  <propertyList>
-		<property title="Hf298">
-		  <scalar>91.04</scalar>
-		</property>
-		<!--<property title="Hf0">
-          <scalar>90.54</scalar>
-        </property>-->
-		<property title="SpinMultiplicity" dictRef="me:spinMultiplicity">
-		  <scalar>2.00 </scalar>
-		</property>
-		<property title="Vibrational Frequencies" dictRef="me:vibFreqs">
-		  <array units="cm-1">1904.00 </array>
-		</property>
-		<property title="Rotational Constants" dictRef="me:rotConsts">
-		  <array units="cm-1">1.671 </array>
-		</property>
-		<property title="Symmetry Number" dictRef="me:symmetryNumber">
-		  <scalar>1 </scalar>
-		</property>
-		<property title="Electronic Excitation" dictRef="me:electronicExcitation">
-		  <scalar units="cm-1">119.8</scalar>
-		</property>
-		<property dictRef="me:deltaEDown">
-		  <scalar units="cm-1">190.0</scalar>
-		</property>
-		<!--<property dictRef="me:ZPE">
-          <scalar calculated="20110602_152733" units="kJ/mol" source="me:Hf0" convention="computational">-340720.04</scalar>
-        </property>-->
-	  </propertyList>
-	</molecule>
-
-	<molecule id="He">
-	  <atom elementType="He"/>
-	  <propertyList>
-		<property dictRef="me:epsilon">
-		  <scalar>10.0</scalar>
-		</property>
-		<property dictRef="me:sigma">
-		  <scalar>2.55</scalar>
-		</property>
-		<property dictRef="me:MW">
-		  <scalar>4.0</scalar>
-		</property>
-		<property dictRef="me:ZPE">
-		  <scalar units="cm-1">0.0</scalar>
 		</property>
 	  </propertyList>
 	</molecule>
 
   </moleculeList>
-  <reactionList>
-	<reaction id="R1" reversible="true">
-	  <reactant>
-		<molecule ref="NO"  me:type="excessReactant" />
-	  </reactant>
-	  <reactant>
-		<molecule ref="OH"  me:type="deficientReactant" />
-	  </reactant>
-	  <product>
-		<molecule ref="HNO2"  me:type="modelled" />
-	  </product>
-	  <me:MCRCMethod>MesmerILT</me:MCRCMethod>
-	  <me:preExponential>6.00e-12</me:preExponential>
-	  <me:activationEnergy  units="cm-1" reverse="true">546.0</me:activationEnergy>
-	  <me:TInfinity>1.0</me:TInfinity>
-	  <me:nInfinity>0.0</me:nInfinity>
-	  <me:excessReactantConc>1e14</me:excessReactantConc>
-	</reaction>
-  </reactionList>
-
-  <me:conditions>
-	<me:bathGas>He</me:bathGas>
-	<me:PTs>
-	  <me:PTpair me:units="Torr" me:P="760" me:T="560" />
-	</me:PTs>
-  </me:conditions>
 
   <me:control>
 	<me:testDOS />
