@@ -8,7 +8,7 @@
     \_/      |/      | \_/ \_/ |   V   | \_/ |  \ 
 
      Mesmer: Master Equation Solver for Multi-Energy well Reactions
-     Mesmer v2.0 compiled: -- May 30 2012 -- 18:40:12
+     Mesmer v2.0 compiled: -- Jul 21 2012 -- 11:03:53
 
      Copyright (C) 2009-2012 by
      Struan H. Robertson, David R. Glowacki, Chi-Hsiu Liang,
@@ -30,34 +30,19 @@
 Parsing input xml file...
 UnitTests.xml
 
-The default value of me:grainSize was used.
-The default value of me:energyAboveTheTopHill was used.
-In R1: Parsing reaction...
-In NO: The default value of me:frequenciesScaleFactor was used.
-In NO: The default value of me:DOSCMethod was used.
-In NO: New me:ZPE element written with data from me:Hf298
-In OH: The default value of me:frequenciesScaleFactor was used.
-In OH: New me:ZPE element written with data from me:Hf298
-In HNO2: The default value of me:sigma was used.
-In HNO2: The default value of me:epsilon was used.
-In HNO2: The default value of me:frequenciesScaleFactor was used.
-In HNO2: The default value of spinMultiplicity (or one of its attributes) was used.
-In HNO2: The default value of me:DOSCMethod was used.
-In HNO2: New me:ZPE element written with data from me:Hf298
-In HNO2: The default value of me:DistributionCalcMethod was used.
-In HNO2: The default value of me:energyTransferModel was used.
-In HNO2: The default value of me:deltaEDownTExponent was used.
-In R1: No tunneling method requested for R1
-In R1: No crossing method requested for R1
-In R1: Not a unimolecular reaction: look for excess reactant concentration.
-All molecules are on the same energy basis: computational
-The default value of me:precision was used.
-760Torr, 560K at double precision
-The default value of me:eigenvalues was used.
-Write metadata 20120530_200148
+Write metadata 20120721_183844
 
 File: "UnitTests.xml" successfully parsed.
 Calculate EGME
+In Test Molecule: The default value of me:frequenciesScaleFactor was used.
+In Test Molecule: The default value of spinMultiplicity (or one of its attributes) was used.
+In Test Molecule: The default value of me:DOSCMethod was used.
+In Test Molecule: If no chemical structure is provided,Molecular Weight must be input as an XML property.
+In Test Molecule: To use me::Hf0 or Hf298 the molecule needs chemical structure (an atomList at least)
+In Test Molecule: New me:ZPE element written with data from me:Hf298
+Number of grains produced is not equal to that requested
+Number of grains requested: 5000
+Number of grains produced : 4959
  -- Total time elapsed: 0 seconds.
 
 System saved to out.xml
