@@ -102,4 +102,55 @@
             1.9         -0.741         -0.741
             2.1          0.861          0.861
 
-  All tests pass.
+  Test: MEIC 1.
+  -------------
+
+  Test of Beyer-Swinehart algorithm based on model taken from: 
+  Baer & Hase, Unimolecular Reaction Dynamics. Theory and Experiments, 
+  [Oxford U. Press, 1996], p. 186.
+
+
+    Energy/cm-1                 SoS Cell                SoS Grain
+  ---------------------------------------------------------------
+              0                        1                        1
+            100                        2                        2
+            200                        3                        3
+            300                        6                        6
+            400                       10                       10
+            500                       15                       15
+            600                       24                       23*
+            700                       37                       36
+            800                       51                       51
+            900                       72                       72
+           1000                      102                      101
+           2000                     1421                     1415
+           3000                    10455                    10434
+           4000                    53977                    53892
+           5000                   221815                   221518
+           6000                   775407                   774485
+           7000                  2397197                  2394605
+           8000                  6722941                  6716290
+           9000                 17410352                 17394410
+          10000                 42176832                 42140767
+          11000                 96519907                 96442540
+          12000                210261021                210102109
+          13000                438682965                438369087
+          14000                880943471                880345173
+          15000               1709750702               1708644055
+          16000               3218086235               3216097743
+          17000               5891262336               5887778036
+          18000              10515960570              10509993184
+          19000              18342397632              18332396499
+          20000              31321740352              31305299027
+          21000              52448630509              52422084789
+          22000              86248763785              86206617574
+          23000             139464362778             139398471768
+          24000             222006711199             221905183236
+          25000             348265626907             348111289083
+          26000             538891492730             538659824001
+          27000             823197538405             822853912593
+          28000            1242369663927            1241865646801
+          29000            1853719478089            1852987972381
+          30000            2736275451823            2735224317606
+
+  One or more tests failed
